--- a/css/pc.css
+++ b/css/pc.css
@@ -96,6 +96,12 @@ header .row > div:nth-child(1) > a img
 	opacity : 0;
 }
 
+/* 트게더 접속인원 아이콘 변경*/
+#board-info #viewers-area .fa-user:before
+{
+	content: url(https://static-cdn.jtvnw.net/badges/v1/cb273ad9-4317-414c-bc32-69ce8e6d6ee7/1); /* 12M sub icon - 18x18 */
+}
+
 
 #board-info #viewers-area #viewers:before
 {
